@startuml Class Diagram Sistem Manajemen Jamaah Haji

title Class Diagram Sistem Manajemen Jamaah Haji

left to right direction

skinparam backgroundColor #FEFEFE
skinparam class {
    BackgroundColor #FFFFFF
    BorderColor #000000
    BorderThickness 2
    FontSize 10
}

package "Database" as DB {
    class Database {
        - host: string
        - user: string
        - pass: string
        - db: string
        - conn: mysqli
    }
}

package "User Entities" as Users {
    class Admin {
        - id: int
        - username: string
        - email: string
        - password: string
    }

    class Pengguna {
        - id: int
        - username: string
        - email: string
        - nik: string
        - password: string
    }
}

package "Master Data Entities" as Masters {
    class PembimbingHaji {
        - id: int
        - nama_lengkap: string
        - nik: string
        - telepon: string
        - alamat: string
        - email: string
        - foto: string
        - keterangan: string
    }

    class Berita {
        - id: int
        - judul: string
        - konten: string
        - tanggal_publikasi: date
        - penulis: string
        - gambar: string
    }
}

package "Jamaah Data (by Year)" as Jamaah {
    class JamaahHaji {
        - id: int
        - foto: string
        - nik: string
        - no_porsi: string
        - nama_lengkap: string
        - jenis_kelamin: string
        - tanggal_lahir: date
        - alamat: string
        - telepon: string
        - no_paspor: string
        - golongan_darah: string
        - penyakit_bawaan: string
        - jadwal_berangkat: date
        - status: string
        - data_pulang: date
        - id_pembimbing: int
    }

    class Jamaah2027 {
        - id: int
        - foto: string
        - nik: string
        - no_porsi: string
        - nama_lengkap: string
        - jenis_kelamin: string
        - tanggal_lahir: date
        - alamat: string
        - telepon: string
        - no_paspor: string
        - golongan_darah: string
        - penyakit_bawaan: string
        - jadwal_berangkat: date
        - status: string
        - data_pulang: date
        - id_pembimbing: int
    }

    class Jamaah2028 {
        - id: int
        - foto: string
        - nik: string
        - no_porsi: string
        - nama_lengkap: string
        - jenis_kelamin: string
        - tanggal_lahir: date
        - alamat: string
        - telepon: string
        - no_paspor: string
        - golongan_darah: string
        - penyakit_bawaan: string
        - jadwal_berangkat: date
        - status: string
        - data_pulang: date
        - id_pembimbing: int
    }

    class Jamaah2029 {
        - id: int
        - foto: string
        - nik: string
        - no_porsi: string
        - nama_lengkap: string
        - jenis_kelamin: string
        - tanggal_lahir: date
        - alamat: string
        - telepon: string
        - no_paspor: string
        - golongan_darah: string
        - penyakit_bawaan: string
        - jadwal_berangkat: date
        - status: string
        - data_pulang: date
        - id_pembimbing: int
    }
}

' Relationships
Masters.PembimbingHaji --> Jamaah.JamaahHaji : guides
Masters.PembimbingHaji --> Jamaah.Jamaah2027 : guides
Masters.PembimbingHaji --> Jamaah.Jamaah2028 : guides
Masters.PembimbingHaji --> Jamaah.Jamaah2029 : guides

Users.Admin --> Jamaah.JamaahHaji : manages
Users.Admin --> Jamaah.Jamaah2027 : manages
Users.Admin --> Jamaah.Jamaah2028 : manages
Users.Admin --> Jamaah.Jamaah2029 : manages
Users.Admin --> Masters.PembimbingHaji : manages
Users.Admin --> Masters.Berita : manages


Users.Pengguna --> Masters.PembimbingHaji : views
Users.Pengguna --> Masters.Berita : views

@enduml
